<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".compute"
    android:id="@+id/compute_relative">

    <GridLayout
        android:layout_width="240dp"
        android:layout_height="348dp"
        android:id="@+id/gridLayoutnum"
        android:rowCount="4"
        android:columnCount="3"
        android:orientation="vertical"
        android:background="#434343"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"

        >

        <TextView
            android:layout_width="80dp"
            android:layout_height="87dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/btn_1"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:textColor="#ffffff"
            android:id="@+id/textView1"
            android:layout_row="2"
            android:layout_column="0"
            android:textSize="30sp"
            android:padding="18dp"
            />

        <TextView
            android:layout_width="80dp"
            android:layout_height="87dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/btn_2"
            android:textColor="#ffffff"
            android:id="@+id/textView2"
            android:layout_row="2"
            android:layout_column="1"
            android:textSize="30sp"
            android:padding="18dp"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="87dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/btn_4"
            android:textColor="#ffffff"
            android:id="@+id/textView4"
            android:layout_row="1"
            android:layout_column="0"
            android:textSize="30sp"
            android:padding="18dp"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="87dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/btn_3"
            android:textColor="#ffffff"
            android:id="@+id/textView3"
            android:layout_row="2"
            android:layout_column="2"
            android:textSize="30sp"
            android:padding="18dp"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="87dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/btn_5"
            android:textColor="#ffffff"
            android:id="@+id/textView5"
            android:layout_row="1"
            android:layout_column="1"
            android:textSize="30sp"
            android:padding="18dp"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="87dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/btn_6"
            android:textColor="#ffffff"
            android:id="@+id/textView6"
            android:layout_row="1"
            android:layout_column="2"
            android:textSize="30sp"
            android:padding="18dp"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="87dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/btn_7"
            android:textColor="#ffffff"
            android:id="@+id/textView7"
            android:layout_row="0"
            android:layout_column="0"
            android:textSize="30sp"
            android:padding="18dp"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="87dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/btn_8"
            android:textColor="#ffffff"
            android:id="@+id/textView8"
            android:layout_row="0"
            android:layout_column="1"
            android:textSize="30sp"
            android:padding="18dp"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="87dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/btn_9"
            android:textColor="#ffffff"
            android:id="@+id/textView9"
            android:layout_row="0"
            android:layout_column="2"
            android:textSize="30sp"
            android:padding="18dp"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="87dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/btn_dot"
            android:textColor="#ffffff"
            android:id="@+id/textView10"
            android:layout_row="3"
            android:layout_column="0"
            android:textSize="30sp"
            android:padding="18dp"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="87dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/btn_0"
            android:textColor="#ffffff"
            android:id="@+id/textView11"
            android:layout_row="3"
            android:layout_column="1"
            android:textSize="30sp"
            android:padding="18dp"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="87dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/btn_equal"
            android:textColor="#ffffff"
            android:id="@+id/textView12"
            android:layout_row="3"
            android:layout_column="2"
            android:textSize="30sp"
            android:padding="18dp"/>

    </GridLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="80dp"
        android:layout_height="348dp"
        android:background="#636363"
        android:divider="@android:color/background_dark"
        android:theme="@android:style/ThemeOverlay.Material.Dark"
        android:id="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/gridLayoutnum">

        <TextView
            android:layout_width="80dp"
            android:layout_height="69.6dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/btn_del"
            android:textColor="#ffffff"
            android:id="@+id/textView13"
            android:textSize="20sp"
            android:padding="15dp"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="69.6dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/btn_div"
            android:textColor="#ffffff"
            android:id="@+id/textView14"
            android:textSize="30sp"
            android:padding="18dp"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="69.6dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/btn_mul"
            android:textColor="#ffffff"
            android:id="@+id/textView15"
            android:textSize="30sp"
            android:padding="18dp"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="69.6dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/btn_min"
            android:textColor="#ffffff"
            android:id="@+id/textView16"
            android:textSize="30sp"
            android:padding="18dp"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="69.6dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/btn_plus"
            android:textColor="#ffffff"
            android:id="@+id/textView17"
            android:textSize="30sp"
            android:padding="18dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:textSize="50sp"
        android:gravity="right"
        android:layout_above="@+id/gridLayoutnum"
        android:layout_marginBottom="38dp"
        android:layout_alignEnd="@+id/linearLayout" />
    <TextView
        android:layout_width="0px"
        android:layout_height="0px"
        android:textColor="#ffffff"
        android:background="#ffffff"
        android:id="@+id/no"
        />


</RelativeLayout>
